--- a/WindowsApp1/App.config
+++ b/WindowsApp1/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WindowsApp1.My.MySettings.Contacts_DBConnectionString"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Contacts_DB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
