--- a/WindowsApp1/WindowsApp1.vbproj
+++ b/WindowsApp1/WindowsApp1.vbproj
@@ -145,6 +145,12 @@
     <Compile Include="newForm8.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="newForm9.Designer.vb">
+      <DependentUpon>newForm9.vb</DependentUpon>
+    </Compile>
+    <Compile Include="newForm9.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -176,6 +182,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="newForm8.resx">
       <DependentUpon>newForm8.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="newForm9.resx">
+      <DependentUpon>newForm9.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
